--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
 services:
+  mailpit:
+    image: axllent/mailpit
+    container_name: mailpit
+    ports:
+      - 1025:1025
+      - 8025:8025
   web:
     build:
       context: .
@@ -9,10 +15,25 @@ services:
       - .:/app
     depends_on:
       - db
+      - mailpit
     environment:
+      - MAILPIT_SMTP_HOST=mailpit
+      - MAILPIT_SMTP_PORT=1025
       - PORT=4004
+    # require IEx
+    # In the line you want to stop:
+    # IEx.pry()
+    #
+    # docker-compose run --service-ports web
+    # Uncomment this line:
+    # command: iex -S mix phx.server
+
+    # Keeps stdin open
+    stdin_open: true
+    # Allocates a TTY
+    tty: true
   db:
-    image: postgres:latest
+    image: postgres:16
     environment:
       - 'POSTGRES_USER=coffee'
       - 'POSTGRES_PASSWORD=secret'
@@ -21,3 +42,4 @@ services:
       - ./docker/pgdata:/var/lib/postgresql/data
     ports:
       - "5436:5436"
+
